# torchpcl

./: .gitignore  .gitmodules  BACKEND_CONSOLIDATION.md  MIGRATION.md  README.md  REFACTOR_PLAN.md  pyproject.toml  setup.py
benchmarks/: BASELINE.md  _timing.py  run_benchmark.py
docs/: api.md  batching.md
src/torchpcl/: __init__.py  _backend.py  _segments.py  alignment.py  cloud.py  estimation.py  metrics.py  multiscale.py  neighbors.py  normals.py  preprocess.py  registration.py  search.py  search_cubql.py  transforms.py  types.py  validation.py  voxel.py
src/torchpcl/csrc/: backend.h  bindings.cpp  bruteforce_search_cpu.cpp  bruteforce_search_cuda.cu  cubql_search.cu  cubql_search_cpu.cpp
src/torchpcl/csrc/common/: candidate.h  checks.h
src/torchpcl/csrc/cpu/: bvh.cpp  packed_knn.cpp
src/torchpcl/csrc/cuda/: bvh.cu  packed_knn.cu
tests/: conftest.py  test_alignment.py  test_backend.py  test_bruteforce_search.py  test_chamfer.py  test_cloud.py  test_estimation.py  test_helpers.py  test_metrics.py  test_multiscale.py  test_neighbors.py  test_normals.py  test_open3d_crosscheck.py  test_packed_metrics.py  test_preprocess.py  test_public_api.py  test_registration.py  test_search.py  test_segments.py  test_transforms.py  test_voxel.py
