[project]
name = "torchpcl"
version = "0.1.0"
description = "Point cloud registration (ICP) and processing built on torch and cuBQL"
readme = "README.md"
requires-python = ">=3.14"
# nvcc/cccl pinned to the same minor as torch's bundled CUDA runtime
# (mixed minors in the shared nvidia/cu13 tree fail CCCL's version check).
# They are required: torchpcl JIT-compiles its cuBQL CUDA extension.
dependencies = [
    "numpy>=2",
    "small-gicp",
    "torch>=2.12.0",
    "ninja>=1.11",
    "nvidia-cuda-nvcc~=13.0.0",
    "nvidia-cuda-cccl~=13.0.0",
    "nvidia-cuda-runtime~=13.0.0",
    "nvidia-cuda-crt~=13.0.0",
    "nvidia-nvvm~=13.0.0",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "third_party/small_gicp",
]

[tool.uv.sources]
small-gicp = { workspace = true, editable = true }
