[project]
name = "torchpcl"
version = "0.1.0"
description = "Point cloud registration (ICP) and processing built on torch and cuBQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
    "torch>=2.12.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/torchpcl",
    "/tests",
    "/benchmarks",
    "/data",
    "/third_party/cuBQL/cuBQL",
    "/third_party/cuBQL/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torchpcl"]

[tool.hatch.build.targets.wheel.force-include]
"third_party/cuBQL/cuBQL" = "torchpcl/_vendor/cuBQL/cuBQL"
"third_party/cuBQL/LICENSE" = "torchpcl/_vendor/cuBQL/LICENSE"

[dependency-groups]
dev = [
    "pytest>=8",
    # JIT extension builds. The CUDA packages are pinned to the same minor
    # as torch's bundled CUDA runtime because mixed minors in the shared
    # nvidia/cu13 tree fail CCCL's version check.
    "ninja>=1.11",
    "nvidia-cuda-nvcc~=13.0.0",
    "nvidia-cuda-cccl~=13.0.0",
    "nvidia-cuda-runtime~=13.0.0",
    "nvidia-cuda-crt~=13.0.0",
    "nvidia-nvvm~=13.0.0",
]
benchmark = [
    "open3d; python_version < '3.13'",
    "small-gicp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "third_party/small_gicp",
]

[tool.uv.sources]
small-gicp = { workspace = true, editable = true }
