[project]
name = "torchpcl"
version = "0.2.0.dev0"
description = "Point cloud registration (ICP) and processing built on torch and cuBQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2",
    "torch>=2.10.0",
]

# The extensions build against the environment's torch (see setup.py), so
# install with build isolation disabled (configured below for uv).
[build-system]
requires = ["setuptools>=77", "torch>=2.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
]
benchmark = [
    "open3d; python_version < '3.13'",
    "small-gicp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
no-build-isolation-package = ["torchpcl"]
